# unisales

user-workspace/crm_project/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pytest.ini  requirements-core.txt  requirements.txt  setup.cfg  setup.py  tox.ini
user-workspace/crm_project/.github/workflows/: ci.yml
user-workspace/crm_project/contacts/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/contacts/migrations/: 0001_initial.py
user-workspace/crm_project/core/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/core/migrations/: 0001_initial.py
user-workspace/crm_project/crm_project/: celery.py  celerybeat.py  settings.py  settings_dev.py  settings_prod.py  settings_test.py  urls.py
user-workspace/crm_project/frontend/: index.html  package-lock.json  package.json  vite.config.ts
user-workspace/crm_project/frontend/src/: App.tsx  index.css  main.tsx
user-workspace/crm_project/frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
user-workspace/crm_project/frontend/src/components/ProtectedRoute/: index.tsx
user-workspace/crm_project/frontend/src/contexts/: AuthContext.tsx
user-workspace/crm_project/frontend/src/pages/Contacts/: index.tsx
user-workspace/crm_project/frontend/src/pages/Dashboard/: index.tsx
user-workspace/crm_project/frontend/src/pages/Login/: index.tsx
user-workspace/crm_project/frontend/src/pages/Marketing/: index.tsx
user-workspace/crm_project/frontend/src/pages/Reports/: index.tsx
user-workspace/crm_project/frontend/src/pages/Sales/: index.tsx
user-workspace/crm_project/frontend/src/pages/Settings/: index.tsx
user-workspace/crm_project/frontend/src/pages/Support/: index.tsx
user-workspace/crm_project/frontend/src/routes/: index.tsx
user-workspace/crm_project/frontend/src/types/: auth.ts
user-workspace/crm_project/integrations/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/integrations/migrations/: 0001_initial.py
user-workspace/crm_project/marketing/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/marketing/migrations/: 0001_initial.py
user-workspace/crm_project/reports/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/reports/migrations/: 0001_initial.py
user-workspace/crm_project/sales/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/sales/migrations/: 0001_initial.py
user-workspace/crm_project/support/: admin.py  models.py  serializers.py  urls.py  views.py
user-workspace/crm_project/support/migrations/: 0001_initial.py
