[metadata]
name = django-crm-project
version = 1.0.0
description = A comprehensive CRM system built with Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/django-crm-project
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    docs
    docs.*
    *.tests
    *.tests.*
    examples
    examples.*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude =
    .git,
    .tox,
    .venv,
    __pycache__,
    build,
    dist,
    *.egg-info,
    migrations,
    docs,
    node_modules
ignore =
    # E203: whitespace before ':'
    E203,
    # E266: too many leading '#' for block comment
    E266,
    # E501: line too long
    E501,
    # W503: line break before binary operator
    W503,
    # F403: 'from module import *' used
    F403,
    # F401: module imported but unused
    F401
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores =
    # Settings files may have star imports and unused imports
    */settings*.py:F401,F403,F405
    # URLs may have star imports
    */urls.py:F401,F403
    # Init files may have star imports and unused imports
    */__init__.py:F401,F403

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100
known_first_party = crm_project
known_third_party = django,rest_framework,celery
skip =
    .git,
    .tox,
    .venv,
    migrations,
    node_modules,
    docs

[mypy]
python_version = 3.8
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main, mypy_drf_plugin.main

[mypy.plugins.django-stubs.main]
django_settings_module = crm_project.settings

[mypy-*.migrations.*]
ignore_errors = True

[tool:pytest]
DJANGO_SETTINGS_MODULE = crm_project.settings_test
python_files = tests.py test_*.py *_tests.py
addopts = --reuse-db --nomigrations --cov=. --cov-report=html --cov-report=term-missing
filterwarnings =
    ignore::DeprecationWarning
    ignore::django.utils.deprecation.RemovedInDjango51Warning

[coverage:run]
source = .
omit =
    */migrations/*
    */tests/*
    */test_*.py
    manage.py
    setup.py
    */settings*.py
    */wsgi.py
    */asgi.py
    */apps.py
    */urls.py
    */admin.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError:
    if TYPE_CHECKING:
    @abstractmethod
    class Meta:

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html

[check-manifest]
ignore =
    .travis.yml
    tox.ini
    tests
    tests/*
    docs
    docs/*
    *.pyc
    .git*
    .env*
    .python-version
    .coverage
    htmlcov/*